# data_type

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/genogrove/data_type/: any_type.hpp  arbor.hpp  arbor_registry.hpp  chromosome.hpp  constants.hpp  index.hpp  index_registry.hpp  interval.hpp  key.hpp  key_type_base.hpp  query_result.hpp  type_registry.hpp
include/genogrove/data_type/chromosome/: chromosome_registry.hpp
include/genogrove/datatype/: chrom_mapper.hpp
src/: Interval.cpp  chromosome.cpp  chromosome_registry.cpp  index.cpp  index_registry.cpp  interval.cpp  query_result.cpp  type_registry.cpp
tests/: CMakeLists.txt  index-test.cpp  interval-test.cpp  key-test.cpp  query_result-test.cpp  type_registry-test.cpp
